--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -6,59 +6,40 @@
         <table class="table table-striped table-dark table-hover">
           <thead>
             <tr>
-              <th scope="col">Id</th>
               <th scope="col">Name</th>
               <th scope="col">Position</th>
               <th scope="col">Model</th>
             </tr>
           </thead>
           <tbody>
-            <tr
-              *ngFor="
-                let device of DevicesList
-                  | paginate
+            <tr *ngFor=" let device of DeviceList | paginate
                     : {
                         id: 'devicePagination',
                         itemsPerPage: 5,
                         currentPage: deviceListPage
                       }
-              "
-            >
-              <td>{{ device.id }}</td>
-              <td>{{ device.name }}</td>
+              ">
+              <td tooltip="{{ device.id }}">{{ device.name }}</td>
               <td>
-                ({{ device.position.x }}, {{ device.position.y }},
-                {{ device.position.h }})
+                ({{ device.position.x }}, {{ device.position.y }}, {{ device.position.h }})
               </td>
-              <td>{{ device.model_id }}</td>
+              <td tooltip="{{ device.modelId }}">{{ this.findModelName(device.modelId) }}</td>
               <td>
-                <div
-                  class="btn-group"
-                  role="group"
-                  aria-label="device-operations"
-                >
-                  <button
-                    type="button"
-                    class="btn btn-success btn-sm move-right"
-                    id="edit-device"
-                    (click)="EditForm(device)"
-                  >
+                <div class="btn-group" role="group"
+                  aria-label="device-operations">
+                  <button type="button"
+                    class="btn btn-success btn-sm move-right" id="edit-device"
+                    (click)="EditForm(device)">
                     Edit
                   </button>
-                  <button
-                    type="button"
-                    id="delete-device"
+                  <button type="button" id="delete-device"
                     class="btn btn-danger btn-sm"
-                    (click)="deleteDevice(device.id)"
-                  >
+                    (click)="DeleteDevice(device.id)">
                     Delete
                   </button>
-                  <button
-                    type="button"
-                    id="clone-device"
+                  <button type="button" id="clone-device"
                     class="btn btn-info btn-sm"
-                    (click)="CloneDevice(device.id)"
-                  >
+                    (click)="CloneDevice(device.id)">
                     Clone
                   </button>
                 </div>
@@ -66,19 +47,14 @@
             </tr>
           </tbody>
         </table>
-        <button
-          type="button"
-          class="btn btn-success btn-sm move-right mb-3"
-          (click)="AddForm()"
-        >
+        <button type="button" class="btn btn-success btn-sm move-right mb-3"
+          (click)="AddForm()">
           <i class="bi bi-plus-lg"></i> Add
         </button>
       </div>
     </div>
   </div>
-  <pagination-controls
-    (pageChange)="deviceListPage = $event"
-    id="devicePagination"
-  ></pagination-controls>
+  <pagination-controls (pageChange)="deviceListPage = $event"
+    id="devicePagination"></pagination-controls>
 </div>
 <app-log [component]="component"></app-log>
