Update device model IDs and positions, modify pagination data in device list component and add logging to edit device submission form.

--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -12,7 +12,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor=" let device of DeviceList | paginate
+            <tr *ngFor=" let device of deviceList | paginate
                     : {
                         id: 'devicePagination',
                         itemsPerPage: 5,
