--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -1,42 +1,32 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h3>Add Attribute Dictionary</h3>
+      <h3>Add Attribute</h3>
       <form [formGroup]="formAddAttribute" (ngSubmit)="submitForm()">
-        <div class="form-group mb-3">
-          <label for="id" class="form-label">Id</label>
-          <input type="text" formControlName="id" id="id" required readonly
-            class="form-control" />
-          <div *ngIf="this.formAddAttribute.controls.id.errors"
-            class="invalid-feedback">
-            <div *ngIf="this.formAddAttribute.controls.id.errors.required">
-              Id is required
-            </div>
-            <div *ngIf="this.formAddAttribute.controls.id.errors.minlength">
-              Id must be at least 36 characters
-            </div>
-          </div>
-        </div>
-        <div class="form-group mb-3">
-          <label for="value" class="form-label">Value</label>
-          <input formControlName="value" id="value" required />
-          <div *ngIf="this.formAddAttribute.controls.value.errors"
-            class="invalid-feedback">
-            <div *ngIf="this.formAddAttribute.controls.value.errors.required">
-              Value is required
-            </div>
-            <div *ngIf="this.formAddAttribute.controls.value.errors.minlength">
-              Value must be at least 1 characters
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="col">
+            <div class="form-group mb-2">
+              <label for="id" class="form-label">Id</label>
+              <input type="text" formControlName="id" id="id" required readonly
+                class="form-control" />
+              <div *ngIf="this.formAddAttribute.controls.id.errors"
+                class="invalid-feedback">
+                <div *ngIf="this.formAddAttribute.controls.id.errors.required">
+                  Id is required
+                </div>
+                <div *ngIf="this.formAddAttribute.controls.id.errors.minlength">
+                  Id must be at least 36 characters
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
             <div class="form-group mb-3">
-              <label for="type" class="form-label">Device</label>
-              <select (change)="changeDeviceId($event)" formControlName="type"
-                class="form-control" id="type">
-                <option *ngFor="let deviceObj of deviceList; let i = index">
+              <label for="deviceId" class="form-label">Device Id</label>
+              <select (change)="changeDeviceId($event)"
+                formControlName="deviceId" class="form-control" id="deviceId">
+                <option
+                  *ngFor="let deviceObj of deviceDictionary; let i = index">
                   {{ deviceObj.name }}
                 </option>
               </select>
@@ -48,65 +38,114 @@
                   deviceId is required
                 </div>
               </div>
-              <div>
-                {{
-                this.toString(this.formAddAttribute.controls.deviceId.dirty)
-                }}
-              </div>
             </div>
           </div>
           <div class="col">
-            <div class="form-group mb-3">
+            <div class="form-group mb-2">
               <label for="modelId" class="form-label">Model Id</label>
-              <select (change)="changeModelId($event)" formControlName="modelId"
-                class="form-control" id="modelId">
-                <option *ngFor="
-                    let modelObj of modelList;
-                    let i = index
-                  ">
+              <select (change)="changeModelId($event)" formControlName="type"
+                class="form-control" id="type">
+                <option *ngFor="let modelObj of modelDictionary; let i = index">
                   {{ modelObj.name }}
                 </option>
               </select>
               <div *ngIf="this.formAddAttribute.controls.modelId.errors"
                 class="invalid-feedback">
-                <div *ngIf="
-                    this.formAddAttribute.controls.modelId.errors.required
-                  ">
-                  Model Id is required
+                <div
+                  *ngIf="this.formAddAttribute.controls.modelId.errors.required">
+                  Category is required
                 </div>
+              </div>
+              <div>
+                {{ this.toString(this.formAddAttribute.controls.modelId.value)
+                }}
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="form-group mb-3">
+            <div class="form-group mb-2">
               <label for="connectionId" class="form-label">Connection Id</label>
               <select (change)="changeConnectionId($event)"
-                formControlName="connectionId" class="form-control"
-                id="connectionId">
+                formControlName="type" class="form-control" id="type">
                 <option
-                  *ngFor="let connectionObj of connectionList; let i = index">
-                  {{ connectionObj.id }}
+                  *ngFor="let connectionObj of connectionDictionary; let i = index">
+                  {{ connectionObj.name }}
                 </option>
               </select>
               <div *ngIf="this.formAddAttribute.controls.connectionId.errors"
                 class="invalid-feedback">
                 <div
                   *ngIf="this.formAddAttribute.controls.connectionId.errors.required">
-                  Connection Id is required
+                  Category is required
+                </div>
+              </div>
+              <div>
+                {{
+                this.toString(this.formAddAttribute.controls.connectionId.value)
+                }}
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-2">
+              <label for="connectionId" class="form-label">Attribute Dictionary Id</label>
+              <select (change)="changeAttributeDictionaryId($event)"
+                formControlName="type" class="form-control" id="type">
+                <option
+                  *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index">
+                  {{ attributeDictionaryObj.id }}
+                </option>
+              </select>
+              <div
+                *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors"
+                class="invalid-feedback">
+                <div
+                  *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors.required">
+                  Category is required
+                </div>
+              </div>
+              <div>
+                {{
+                this.toString(this.formAddAttribute.controls.attributeDictionaryId.value)
+                }}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-2">
+              <label for="value" class="form-label">Value</label>
+              <input type="text" formControlName="value" id="id" required
+                class="form-control" />
+              <div *ngIf="this.formAddAttribute.controls.value.errors"
+                class="invalid-feedback">
+                <div
+                  *ngIf="this.formAddAttribute.controls.value.errors.required">
+                  Id is required
+                </div>
+                <div
+                  *ngIf="this.formAddAttribute.controls.value.errors.minlength">
+                  Id must be at least 36 characters
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="form-group mb-3">
-          <button type="submit"
-            [disabled]="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
-            class="btn btn-primary">Add model
-          </button>
-          <div
-            *ngIf="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
-            class="invalid-feedback">
-            Form is invalid
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <button type="submit" [disabled]="
+              !(this.formAddAttribute.valid && this.formAddAttribute.touched)
+            " class="btn btn-primary">
+                Add attribute
+              </button>
+              <div *ngIf="
+              !(this.formAddAttribute.valid && this.formAddAttribute.touched)
+            " class="invalid-feedback">
+                Form is invalid
+              </div>
+            </div>
           </div>
         </div>
       </form>
