--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -6,7 +6,6 @@
         <table class="table table-striped table-dark table-hover">
           <thead>
             <tr>
-              <th scope="col">Id</th>
               <th scope="col">Name</th>
               <th scope="col">Device To</th>
               <th scope="col">Device From</th>
@@ -20,8 +19,7 @@
                         currentPage: connectionListPage
                       }
               ">
-              <td>{{ connectionObj.id }}</td>
-              <td>{{ connectionObj.name }}</td>
+              <td tooltip="{{ connectionObj.id }}">{{ connectionObj.name }}</td>
               <td>{{ connectionObj.deviceIdTo }}</td>
               <td>{{ connectionObj.deviceIdFrom }}</td>
               <td>
