--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-dark bg-dark navbar-expand-sm p-2">
+  <nav class="navbar navbar-expand-sm p-2">
     <div class="container-fluid nav nav-pills">
       <a class="navbar-brand nav-link" id="title" routerLink="/home" routerLinkActive="active fluffy"
         ariaCurrentWhenActive="page">3d inventory</a>
