--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -2,103 +2,90 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Add Attribute</h3>
+      <a class="icon-link" href="#">
+        <svg class="bi" aria-hidden="true">
+          <use xlink:href="#box-seam"></use>
+        </svg>
+        {{ this.toString(this.formAddAttribute.controls.id.value) }}
+      </a>
       <form [formGroup]="formAddAttribute" (ngSubmit)="submitForm()">
         <div class="row">
           <div class="col">
-            <div class="form-group mb-2">
-              <label for="id" class="form-label">Id</label>
-              <input type="text" formControlName="id" id="id" required readonly
-                class="form-control" />
-              <div *ngIf="this.formAddAttribute.controls.id.errors"
-                class="invalid-feedback">
-                <div *ngIf="this.formAddAttribute.controls.id.errors.required">
-                  Id is required
-                </div>
-                <div *ngIf="this.formAddAttribute.controls.id.errors.minlength">
-                  Id must be at least 36 characters
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
             <div class="form-group mb-3">
               <label for="deviceId" class="form-label">Device Id</label>
-              <select (change)="changeDeviceId($event)"
-                formControlName="deviceId" class="form-control" id="deviceId">
-                <option
-                  *ngFor="let deviceObj of deviceDictionary; let i = index"  value="{{ deviceObj.id }}">
+              <select (change)="changeDeviceId($event)" formControlName="deviceId" class="form-control" id="deviceId">
+                <option *ngFor="let deviceObj of deviceDictionary; let i = index" value="{{ deviceObj.id }}">
                   {{ deviceObj.name }}
                 </option>
               </select>
               <div *ngIf="this.formAddAttribute.controls.deviceId.errors" class="invalid-feedback">
                 <div *ngIf="this.formAddAttribute.controls.deviceId.errors.required">
-                  deviceId is required
-                </div>
+                  deviceId is required</div>
+              </div>
+              <div>
+                {{ this.toString(this.formAddAttribute.controls.deviceId.value)
+                }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-2">
               <label for="modelId" class="form-label">Model Id</label>
-              <select (change)="changeModelId($event)" formControlName="type" class="form-control" id="type">
+              <select (change)="changeModelId($event)" formControlName="modelId" class="form-control" id="modelId">
                 <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
                   {{ modelObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.modelId.errors"
-                class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.modelId.errors.required">
-                  modelId is required
-                </div>
+              <div *ngIf="this.formAddAttribute.controls.modelId.errors" class="invalid-feedback">
+                <div *ngIf="this.formAddAttribute.controls.modelId.errors.required">
+                  modelId is required</div>
               </div>
               <div>
-                {{ this.toString(this.formAddAttribute.controls.modelId.value)  }}
+                {{ this.toString(this.formAddAttribute.controls.modelId.value)
+                }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-2">
               <label for="connectionId" class="form-label">Connection Id</label>
-              <select (change)="changeConnectionId($event)"
-                formControlName="type" class="form-control" id="type">
-                <option
-                  *ngFor="let connectionObj of connectionDictionary; let i = index" value="{{ connectionObj.id }}">
+              <select (change)="changeConnectionId($event)" formControlName="connectionId" class="form-control" id="connectionId">
+                <option *ngFor="let connectionObj of connectionDictionary; let i = index"
+                  value="{{ connectionObj.id }}">
                   {{ connectionObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.connectionId.errors"
-                class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.connectionId.errors.required">
-                  connectionId is required
-                </div>
+              <div *ngIf="this.formAddAttribute.controls.connectionId.errors" class="invalid-feedback">
+                <div *ngIf="this.formAddAttribute.controls.connectionId.errors.required">
+                  connectionId is required</div>
               </div>
               <div>
-                {{ this.toString(this.formAddAttribute.controls.connectionId.value) }}
+                {{
+                this.toString(this.formAddAttribute.controls.connectionId.value)
+                }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-2">
-              <label for="connectionId" class="form-label">Attribute Dictionary Id</label>
-              <select (change)="changeAttributeDictionaryId($event)"
-                formControlName="type" class="form-control" id="type">
-                <option
-                  *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"  value="{{ attributeDictionaryObj.id }}">
-                  {{ attributeDictionaryObj.id }}
+              <label for="attributeDictionaryId" class="form-label">Attribute Dictionary
+                Id</label>
+              <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId" class="form-control"
+                id="attributeDictionaryId">
+                <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
+                  value="{{ attributeDictionaryObj.id }}">
+                  {{ attributeDictionaryObj.name }}
                 </option>
               </select>
-              <div
-                *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors"
-                class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors.required">
+              <div *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors" class="invalid-feedback">
+                <div *ngIf="this.formAddAttribute.controls.attributeDictionaryId.errors.required">
                   attributeDictionaryId is required
                 </div>
               </div>
               <div>
-                {{ this.toString(this.formAddAttribute.controls.attributeDictionaryId.value) }}
+                {{
+                this.toString(this.formAddAttribute.controls.attributeDictionaryId.value)
+                }}
               </div>
             </div>
           </div>
@@ -107,16 +94,12 @@
           <div class="col">
             <div class="form-group mb-2">
               <label for="value" class="form-label">Value</label>
-              <input type="text" formControlName="value" id="id" required
-                class="form-control" />
-              <div *ngIf="this.formAddAttribute.controls.value.errors"
-                class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.value.errors.required">
+              <input type="text" formControlName="value" id="id" required class="form-control" />
+              <div *ngIf="this.formAddAttribute.controls.value.errors" class="invalid-feedback">
+                <div *ngIf="this.formAddAttribute.controls.value.errors.required">
                   attributeDictionaryId is required
                 </div>
-                <div
-                  *ngIf="this.formAddAttribute.controls.value.errors.minlength">
+                <div *ngIf="this.formAddAttribute.controls.value.errors.minlength">
                   attributeDictionaryId must be at least 36 characters
                 </div>
               </div>
@@ -126,15 +109,20 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <button type="submit" [disabled]="
-              !(this.formAddAttribute.valid && this.formAddAttribute.touched)
-            " class="btn btn-primary">
+              <button type="submit" [disabled]="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
+                class="btn btn-primary">
                 Add attribute
               </button>
-              <div *ngIf="
-              !(this.formAddAttribute.valid && this.formAddAttribute.touched)
-            " class="invalid-feedback">
+              <div *ngIf="!(this.formAddAttribute.valid && this.formAddAttribute.touched)" class="invalid-feedback">
                 Form is invalid
+              </div>
+              <span class="text-danger" *ngIf="formAddAttribute.hasError('atLeastOneValidator')"> Fill
+                one of Id first </span>
+              <div>atLeastOneValidator: {{
+                formAddAttribute.hasError('atLeastOneValidator') }}
+              </div>
+              <div>
+                {{ toString(formAddAttribute.value) }}
               </div>
             </div>
           </div>
