--- a/src/app/components/connection/add-connection/add-connection.component.html
+++ b/src/app/components/connection/add-connection/add-connection.component.html
@@ -2,31 +2,40 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Add Connection</h3>
-      <form [formGroup]="addConnectionFrom" (ngSubmit)="submitForm()">
-        <div class="form-group mb-3">
-          <label for="id" class="form-label">Id</label>
-          <input type="text" formControlName="id" id="id" required readonly class="form-control" />
-          <div *ngIf="this.addConnectionFrom.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.addConnectionFrom.controls.id.errors.required">Id is required</div>
-            <div *ngIf="this.addConnectionFrom.controls.id.errors.minlength">Id must be at least 4 characters</div>
-          </div>
-        </div>
-        <div class="form-group mb-3">
-          <label for="name" class="form-label">Name</label>
-          <textarea
-            [ngClass]="{
-              'is-invalid': this.addConnectionFrom.controls.name.status != 'VALID',
-              'form-control': true
-            }"
-            formControlName="name"
-            id="name"
-            required
-            >{{ this.addConnectionFrom.value.name }}</textarea
-          >
-          <div *ngIf="this.addConnectionFrom.controls.name.errors" class="invalid-feedback">
-            <div *ngIf="this.addConnectionFrom.controls.name.errors.required">Attribute name is required</div>
-            <div *ngIf="this.addConnectionFrom.controls.name.errors.minlength">
-              Attribute name must be at least 6 characters
+      <a class="icon-link" href="#">
+        <svg class="bi" aria-hidden="true">
+          <use xlink:href="#box-seam"></use>
+        </svg>
+        {{ this.toString(this.addConnectionForm.controls.id.value) }}
+      </a>
+      <form [formGroup]="addConnectionForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate >
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input formControlName="name" id="name" class="form-control" value="{{ this.addConnectionForm.value.name }}">
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+              <div class="invalid-feedback">
+                Please choose a name 6 char len.
+              </div>
+
+              <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="alert">
+                <div *ngIf="name?.errors?.['required']">
+                  Name is required.
+                </div>
+                <div *ngIf="name?.errors?.['minlength']" >
+                  Name must be at least 6 characters long.
+                </div>
+              </div>
+              <div  *ngIf="(
+                addConnectionForm.get('name')?.dirty ||
+                addConnectionForm.get('name')?.touched
+               ) &&
+               addConnectionForm.get('name')?.invalid">
+                Please provide connection name.
+              </div>
             </div>
           </div>
         </div>
@@ -34,53 +43,44 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="deviceIdFrom" class="form-label">Device From</label>
-              <select
-                (change)="changeDeviceFrom($event)"
-                formControlName="deviceIdFrom"
-                class="form-control"
-                id="deviceIdFrom">
+              <select (change)="changeDeviceFrom($event)" formControlName="deviceIdFrom" class="form-control" id="deviceIdFrom">
                 <option *ngFor="let deviceFromObj of deviceList; let i = index">
                   {{ i }} {{ deviceFromObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addConnectionFrom.controls.deviceIdFrom.errors" class="invalid-feedback">
-                <div *ngIf="this.addConnectionFrom.controls.deviceIdFrom.errors.required">Defice Id From is required</div>
+              <div *ngIf="this.addConnectionForm.controls.deviceIdFrom.errors" class="invalid-feedback">
+                <div *ngIf="this.addConnectionForm.controls.deviceIdFrom.errors.required">Defice Id From is required
+                </div>
               </div>
               <div>
-                {{ this.toString(this.addConnectionFrom.controls.deviceIdFrom.dirty) }}
+                {{ this.toString(this.addConnectionForm.controls.deviceIdFrom.hasError) }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
               <label for="deviceIdTo" class="form-label">Device To</label>
-              <select
-                (change)="changeDeviceTo($event)"
-                formControlName="deviceIdTo"
-                class="form-control"
-                id="deviceIdTo">
+              <select (change)="changeDeviceTo($event)" formControlName="deviceIdTo" class="form-control" id="deviceIdTo">
                 <option *ngFor="let deviceToObj of deviceList; let i = index">
                   {{ i }} {{ deviceToObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addConnectionFrom.controls.deviceIdTo.errors" class="invalid-feedback">
-                <div *ngIf="this.addConnectionFrom.controls.deviceIdTo.errors.required">Device Id To is required</div>
+              <div *ngIf="this.addConnectionForm.controls.deviceIdTo.errors" class="invalid-feedback">
+                <div *ngIf="this.addConnectionForm.controls.deviceIdTo.errors.required">Device Id To is required</div>
               </div>
               <div>
-                {{ this.toString(this.addConnectionFrom.controls.deviceIdTo.dirty) }}
+                {{ this.toString(this.addConnectionForm.controls.deviceIdTo.hasError) }}
               </div>
             </div>
           </div>
-          <div class="form-group mb-3">
-            <button
-              type="submit"
-              [disabled]="!(this.addConnectionFrom.valid && this.addConnectionFrom.touched)"
-              class="btn btn-primary">
-              Add connection
-            </button>
-            <div *ngIf="!(this.addConnectionFrom.valid && this.addConnectionFrom.touched)" class="invalid-feedback">
-              Form is invalid
-            </div>
+        </div>
+        <div class="form-group mb-3">
+          <button type="submit" [disabled]="!(this.addConnectionForm.valid && this.addConnectionForm.touched)"
+            class="btn btn-primary">
+            Add connection
+          </button>
+          <div *ngIf="!(this.addConnectionForm.valid && this.addConnectionForm.touched)" class="invalid-feedback">
+            Form is invalid
           </div>
         </div>
       </form>
