--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <div class="inner">
         <h3>Models</h3>
-        <table class="table table-striped table-dark table-hover">
+        <table class="table table-striped table-hover">
           <thead>
             <tr>
               <th scope="col">Name</th>
