--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
       <div class="inner">
         <h2>Connection</h2>
-        <table class="table table-striped table-dark table-hover">
+        <table class="table table-striped table-hover">
           <thead>
             <tr>
               <th scope="col">Name</th>
