--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,4 @@ body {
   height: 100vh;
 }
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons';
+@import "../node_modules/bootstrap/scss/bootstrap";
