Refactor attribute dictionary list and edit attribute templates
- Restructured the attribute dictionary list template to remove the "Id" column and added tooltip for the "Name" column.
- Simplified the edit attribute template by removing unnecessary nested divs, updated formGroup and formControl names, and added validation classes for the select fields.
- Updated the error message display for the "atLeastOneValidator" error.
- Renamed formEditAttribute to editAttributeForm in the log messages.
- Updated the submit button disable condition in the edit attribute template.

--- a/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
+++ b/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
@@ -6,7 +6,6 @@
         <table class="table table-striped table-hover">
           <thead>
             <tr>
-              <th scope="col">Id</th>
               <th scope="col">Name</th>
               <th scope="col">Category</th>
               <th scope="col">Type</th>
@@ -23,8 +22,7 @@
                         currentPage: attributeDictionaryPage
                       }
               ">
-              <td>{{ attributeDictionary.id }}</td>
-              <td>{{ attributeDictionary.name }}</td>
+              <td  tooltip="{{ attributeDictionary.id }}">{{ attributeDictionary.name }}</td>
               <td>{{ attributeDictionary.category }}</td>
               <td>{{ attributeDictionary.type }}</td>
               <td>{{ attributeDictionary.component }}</td>
